# NewVault

./: CMakeLists.txt  README.md
inc/: cryptoutils.hpp  vault.hpp
src/: cryptoutils.cpp  main.cpp  vault.cpp
